--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -21,36 +21,24 @@
         Documentation
       </a>
 
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More
-        </a>
-
-        <div class="navbar-dropdown">
-          <a class="navbar-item">
-            About
-          </a>
-          <a class="navbar-item">
-            Jobs
-          </a>
-          <a class="navbar-item">
-            Contact
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            Report an issue
-          </a>
-        </div>
-      </div>
     </div>
 
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
           <% if user_signed_in? %>
-            <%= current_user.email %>，你好
-            <%= link_to "個人資料", edit_user_registration_path, class: 'button is-light' %>
-            <%= link_to "登出", destroy_user_session_path, class: 'button is-danger', method: 'delete', data: {confirm: '是否確定登出?!'} %>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              <%= current_user.email %>
+            </a>
+
+            <div class="navbar-dropdown">
+              <%= link_to "個人資料", edit_user_registration_path, class: 'navbar-item' %>
+              <hr class="navbar-divider">
+              <%= link_to "登出", destroy_user_session_path, class: 'navbar-item', method: 'delete', data: {confirm: '是否確定登出?!'} %>
+            </div>
+          </div>
+
           <% else %>
             <%= link_to "註冊", new_user_registration_path, class: 'button is-primary' %>
             <%= link_to "登入", new_user_session_path, class: 'button is-light' %>
