--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -2,7 +2,10 @@
 
 <% @stories.each do |story| %>
   <div class="content">
-    <h2 class="title"><%= story.title %></h2>
+    <h2 class="title">
+      <%= story.title %>
+      <%= content_tag :span, '已發佈', class: 'tag is-primary' if story.published? %>
+    </h2>
     <p><%= story.content %></p>
     <p>
       最後編輯時間：<%= time_ago_in_words(story.updated_at) %>
@@ -10,5 +13,4 @@
       <%= link_to "刪除", story, method: 'delete', class: 'button is-danger is-small', data: { confirm: '確認刪除?!'} %>
     </p>
   </div>
-  <hr>
 <% end %>
