--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -1,3 +1,9 @@
+<% if story.errors.any? %>
+  <div class="notification is-danger">
+    <%= story.errors.full_messages.to_sentence %>
+  </div>
+<% end %>
+
 <%= form_for(story) do |form| %>
   <div class="field">
     <%= form.label :title, '標題' %>
@@ -9,6 +15,9 @@
   </div>
   <div class="field">
     <%= form.submit '儲存草稿', name: 'save_as_draft', class: 'button is-medium'%>
-    <%= form.submit '發佈文章', name: 'publish', class: 'button is-medium is-primary'%>
+
+    <%= form.submit '發佈文章', name: 'publish', class: 'button is-medium is-primary' if story.may_publish? %>
+
+    <%= form.submit '文章下架', name: 'unpublish', class: 'button is-medium is-danger' if story.may_unpublish? %>
   </div>
 <% end %>
