--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,9 +4,24 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :username, '使用者帳號' %><br />
+    <div class="control">
+      <%= f.text_field :username, class: 'input is-medium' %>
+    </div>
+    <p class="help">範例：@eddiekao</p>
+  </div>
+
+  <div class="field">
+    <%= f.label :intro, '個人簡介' %><br />
+    <div class="control">
+      <%= f.text_area :intro, class: 'textarea is-medium', rows: 5%>
+    </div>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <div class="control">
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= f.email_field :email, autocomplete: "email", class: 'input is-medium' %>
     </div>
   </div>
 
@@ -17,7 +32,7 @@
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <div class="control">
-      <%= f.password_field :password, autocomplete: "new-password", class: 'input' %>
+      <%= f.password_field :password, autocomplete: "new-password", class: 'input is-medium' %>
       <% if @minimum_password_length %>
         <br />
         <em><%= @minimum_password_length %> characters minimum</em>
@@ -28,24 +43,13 @@
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <div class="control">
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'input' %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <div class="control">
-      <%= f.password_field :current_password, autocomplete: "current-password", class: 'input' %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'input is-medium' %>
     </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update", class: 'button is-primary' %>
+    <%= f.submit "Update", class: 'button is-primary is-medium' %>
   </div>
 <% end %>
-
-<h3 class="title is-3">Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'button is-danger' %></p>
 
 <%= link_to "Back", :back, class: 'button' %>
