add username to registration page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,9 +4,17 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :username, '使用者帳號' %><br />
+    <div class="control">
+      <%= f.text_field :username, class: 'input is-medium' %>
+    </div>
+    <p class="help">範例：@eddiekao</p>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <div class="control">
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'input' %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'input is-medium' %>
     </div>
   </div>
 
@@ -16,19 +24,19 @@
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: 'input' %>
+      <%= f.password_field :password, autocomplete: "new-password", class: 'input is-medium' %>
     </div>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <div class="control">
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'input' %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'input is-medium' %>
     </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", class: 'button is-primary' %>
+    <%= f.submit "Sign up", class: 'button is-primary is-medium' %>
   </div>
 <% end %>
 
