--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -18,6 +18,7 @@
           <% if user_signed_in? %>
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
+              <%= avatar(current_user, size: 50) %>
               <%= current_user.email %>
             </a>
 
