add cover image

--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -6,13 +6,21 @@
 
 <%= form_for(story) do |form| %>
   <div class="field">
+    <%= image_tag story.cover_image.variant(resize: '1000x800'), class: 'cover-image' if story.cover_image.attached? %>
+    <%= form.label :cover_image, '封面圖' %>
+    <%= form.file_field :cover_image %>
+  </div>
+
+  <div class="field">
     <%= form.label :title, '標題' %>
     <%= form.text_field :title, class: 'input is-primary is-medium' %>
   </div>
+
   <div class="field">
     <%= form.label :content, '內容' %>
     <%= form.text_area :content, rows: 10, class: 'textarea is-primary is-medium' %>
   </div>
+
   <div class="field">
     <%= form.submit '儲存草稿', name: 'save_as_draft', class: 'button is-medium'%>
 
