--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,29 +1,19 @@
 <section class="columns has-text-centered story-content">
   <section class="column is-offset-3 is-6">
-    <h1 class="title">Hello, This is a Super Awesome Medium Clone Project</h1>
+    <h1 class="title"><%= @story.title %></h1>
 
     <span class="profile">
-      <img src="https://fakeimg.pl/50x50/" class="avatar"> 
-      <span class="username">高見龍</span>
+      <%= image_tag @story.user.avatar.variant(resize: '50x50'), class: 'avatar' if @story.user.avatar.attached? %>
+      <span class="username"><%= @story.user.username %></span>
       <a href="#" class="follow-button">Follow</a>
     </span>
 
     <article class="content">
-      <img src="https://fakeimg.pl/1000x500/" class="cover-image" alt="">
-      <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      
-      <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-
-      <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <%= image_tag @story.cover_image.variant(resize: '1000x500'), class: 'cover-image' if @story.cover_image.attached? %>
+      <%= simple_format(@story.content) %>
 
       <footer>
-        拍手 108
+        拍手 0
       </footer>
     </article>
     <hr>
