[feature] follow user - part 1

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -2,10 +2,13 @@
   <section class="column is-offset-3 is-6">
     <h1 class="title"><%= @story.title %></h1>
 
-    <span class="profile">
+    <span class="profile" data-controller="user">
       <%= image_tag @story.user.avatar.variant(resize: '50x50'), class: 'avatar' if @story.user.avatar.attached? %>
       <span class="username"><%= @story.user.username %></span>
-      <a href="#" class="follow-button">Follow</a>
+      <%= link_to "Follow", '#', class: 'follow-button', 
+                                 data: { action: 'user#follow', 
+                                         user: @story.user.id, 
+                                         target: 'user.followButton' } %>
     </span>
 
     <article class="content">
