--- a/app/frontend/stylesheets/stories.scss
+++ b/app/frontend/stylesheets/stories.scss
@@ -79,4 +79,10 @@ form {
       color: darkgray;
     }
   }
+
+  // bookmark
+  .bookmark-button {
+    margin-left: 1em;
+    font-size: 1.4em;
+  }
 }
