--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -10,6 +10,14 @@
                                          target: 'user.followButton' } do %>
         <%= (user_signed_in? && current_user.follow?(@story.user)) ? 'Followed' : 'Follow' %>
       <% end %>
+
+      <%= link_to '#', class: 'bookmark-button', data: { action: 'user#bookmark', slug: @story.slug  } do %>
+        <% if user_signed_in? && current_user.bookmark?(@story) %>
+          <i class="fas fa-bookmark" data-target="user.bookmark"></i>
+        <% else %>
+          <i class="far fa-bookmark" data-target="user.bookmark"></i>
+        <% end %>
+      <% end %>
     </span>
 
     <article class="content">
