[feature] editor - part 1

--- a/app/frontend/stylesheets/stories.scss
+++ b/app/frontend/stylesheets/stories.scss
@@ -1,11 +1,13 @@
-// Place all the styles related to the stories controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import './editor';
 
 form {
   img.cover-image {
     display: block;
   }
+}
+
+form.story-editor {
+  margin-bottom: 2em;
 }
 
 .story-content {
