--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -6,7 +6,7 @@
       <%= link_to story.title, edit_story_path(story), class: 'has-text-grey-darker' %>
       <%= content_tag :span, '已發佈', class: 'tag is-primary' if story.published? %>
     </h2>
-    <p><%= story.content %></p>
+    <p><%= strip_tags(story.content).truncate(200) %></p>
     <p>
       最後編輯時間：<%= time_ago_in_words(story.updated_at) %>
       <%= link_to "編輯", edit_story_path(story), class: 'button is-text is-small' %>
