[feature] editor - part 2

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -22,7 +22,7 @@
 
     <article class="content">
       <%= image_tag @story.cover_image.variant(resize: '1000x500'), class: 'cover-image' if @story.cover_image.attached? %>
-      <%= simple_format(@story.content) %>
+      <%= @story.content.html_safe %>
 
       <footer data-controller="story">
         <%= link_to "#", class: 'clapButton is-size-2 has-text-primary', data: { action: 'story#addClap', slug: @story.slug } do %>
