[feature] vip and platinum - part 1

--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -26,7 +26,10 @@
               <%= link_to "新增故事", new_story_path, class: 'navbar-item' %>
               <%= link_to "故事列表", stories_path, class: 'navbar-item' %>
               <hr class="navbar-divider">
+
+              <%= link_to "會員昇級", pricing_users_path, class: 'navbar-item' unless current_user.paid_user? %>
               <%= link_to "個人資料", edit_user_registration_path, class: 'navbar-item' %>
+
               <hr class="navbar-divider">
               <%= link_to "登出", destroy_user_session_path, class: 'navbar-item', method: 'delete', data: {confirm: '是否確定登出?!'} %>
             </div>
