[feature] vip and platinum - part 2

--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="media-content">
       <div class="content">
-        <strong></span>
+        <strong><%= @payment_type %> (USD <%= @fee %>)</span>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
         </p>
@@ -15,3 +15,24 @@
     </div>
   </article>
 </div>
+
+<div id="dropin-container"></div>
+<button id="submit-button">Request payment method</button>
+
+<script src="https://js.braintreegateway.com/web/dropin/1.20.4/js/dropin.min.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function(event) {
+    var button = document.querySelector('#submit-button');
+
+    braintree.dropin.create({
+      authorization: '<%= @token %>',
+      container: '#dropin-container'
+    }, function (createErr, instance) {
+      button.addEventListener('click', function () {
+        instance.requestPaymentMethod(function (err, payload) {
+          // Submit payload.nonce to your server
+        });
+      });
+    });
+  })
+</script>
