vip and platinum - part 3

--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -18,6 +18,8 @@
           <% if user_signed_in? %>
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
+              <%= content_tag :i, "", class: 'fas fa-crown has-text-primary' if current_user.vip_user? %>
+              <%= content_tag :i, "", class: 'fas fa-crown has-text-danger' if current_user.platinum_user? %>
               <%= avatar(current_user, size: 50) %>
               <%= current_user.email %>
             </a>
